# niri-config-gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
niri-config/: Cargo.toml
niri-gui/: Cargo.toml
niri-ipc/: Cargo.toml
niri-ipc/src/: lib.rs
niri-ipc/tests/: integration_tests.rs
niri-monitor/: Cargo.toml
niri-monitor/src/: lib.rs  monitor.rs
niri-monitor/tests/: niri_monitor_integration_test.rs
